@@ -245,13 +245,16 @@ COpt::savesqlrequest($query);
 		}
 		if($DB_TYPE == "ORACLE")
 		{
-			$sql="select max($field) from $table";
+/*			$sql="select max($field) from $table";
 			$parse=DBexecute($sql);
 			while(OCIFetch($parse))
 			{
 				$colvalue = OCIResult($parse, 1);
 				return $colvalue;
 			}
+*/
+			$res = DBfetch(DBselect('select '.$table.'_'.$field.'.currval from dual'));
+			return $res[0];
 		}
 	}
 
